--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  build-go-app:
     runs-on: ${{ matrix.os}}
     strategy:
       matrix:
@@ -26,7 +26,7 @@ jobs:
         key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
-        
+                 
 
     - name: Build
       run: |
@@ -35,3 +35,25 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+  ssh-login-push-to-docker-hub:
+    needs: [build-go-app] 
+    runs-on: ubuntu-latest    
+    steps:
+      - name: Login to Docker Hub
+      - uses: docker/login-action@v1
+        with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }
+      - name: BUild and push-to-docker-hub
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: surajmachamasi/node_application_hello:v4
+
+
+
+
+  
