--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -52,6 +52,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: surajmachamasi/node_application_hello:$(date +%s)
+          run: docker --version
 
 
 
