--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,7 +35,23 @@ jobs:
 
     - name: Test
       run: go test -v ./...
-
+  push-to-docker-hub:
+    needs: [ build-go-app ] 
+    runs-on: ubuntu-latest    
+    steps:
+      - name: Login to Docker Hub
+      - uses: docker/login-action@v1
+        with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }
+      - name: BUild and push-to-docker-hub
+      - uses: docker/build-push-action@v2
+        with:
+            context: ./
+            file: ./Dockerfile
+            push: true
+            tags: surajmachamasi/node_application_hello:$(date +%s)
+        
 
 
 
