--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -44,6 +44,7 @@ jobs:
         with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }
+
       - name: BUild and push-to-docker-hub
       - uses: docker/build-push-action@v2
         with:
@@ -51,6 +52,8 @@ jobs:
             file: ./Dockerfile
             push: true
             tags: surajmachamasi/node_application_hello:$(date +%s)
+        run: docker images
+        
         
 
 
