--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,14 +35,15 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+    
     - name: Login to Docker Hub
-    - uses: docker/login-action@v1
+      uses: docker/login-action@v1
       with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }
 
     - name: BUild and push-to-docker-hub
-    - uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v2
       with:
             context: ./
             file: ./Dockerfile
