--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,7 +40,7 @@ jobs:
       uses: docker/login-action@v1
       with:
             username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }
+            password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: BUild and push-to-docker-hub
       uses: docker/build-push-action@v2
