--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v2
 
@@ -67,6 +67,10 @@ jobs:
             cd ~/gah-node
             docker-compose build
             docker-compose up -d
+            
+
+
+
 
         
 
