--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   goapp:
-    image: surajmachamasi/go-lang-custom:go-version
+    image: surajmachamasi/go-lang-custom:v3
     volumes:
       - .:/opt/goapp
     ports:
@@ -10,6 +10,6 @@ services:
 
 
 
-    
+
 
 
