--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -71,13 +71,13 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           passphrase: ${{secrets.SSH_PASSPHRASE}}
           script: |
-            if [ -d "~/gah-golang"]
+            if [ -d "/home/suraj/gah-golang"]
             then
-            cd  ~/gah-golang
+            cd  gah-golang
             git pull origin master
             else
             git clone https://github.com/sjnyos/gah-golang.git
-            cd ~/gah-golang
+            cd gah-golang
             docker-compose up -d
             fi
 
