--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -73,6 +73,7 @@ jobs:
           script: |
             cd  gah-golang
             git pull origin master
+            docker-compose down
             docker-compose up -d 
       
           
