--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -71,8 +71,9 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           passphrase: ${{secrets.SSH_PASSPHRASE}}
           script: |
+            sudo rm -r gah-golang
+            git clone https://github.com/sjnyos/gah-golang.git
             cd  gah-golang
-            git pull origin master
             docker-compose down
             docker-compose up -d 
       
