--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,6 +20,8 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
+        - name: getting go git depds 
+        - run:   go get -v -d
         - name: Run golangci-lint
           uses: actions-contrib/golangci-lint@v1
 
