--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,6 +3,8 @@ name: Go
 on:
   push:
     branches: [ master ]
+  pull_request: 
+    branches: [master]
 
 jobs:
   linter:
@@ -24,6 +26,8 @@ jobs:
         uses: actions/checkout@v1
       - name: golangci-lint
         uses: reviewdog/action-golangci-lint@v1
+        with:
+          golangci_lint_flags: "--enable-all --exclude-use-default=false"
 
   build-go-app:
     needs: [linter]
